sesion08a/Ejemplo02/network/subnet.tf
resource "aws_subnet" "main_subnet" {
    vpc_id = aws_vpc.main_vpc.id
    cidr_block = "10.0.0.0/24"
    map_public_ip_on_launch = true
    availability_zone = "us-east-1a"
    tags = {
        Name = "MainSubnet"
    }
}

resource "aws_route_table_association" "main_rta" {
    subnet_id = aws_subnet.main_subnet.id
    route_table_id = aws_route_table.main_route_table.id
}
